Fixed sidebar flickering with particles.

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -45,7 +45,11 @@ textarea {
 }
 
 #particle-div {
-  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  left: 0;
 }
 
 #growninfaithhowcomments, #helpunderstandfaithcomments {
